--- a/test.ipynb
+++ b/test.ipynb
@@ -119,7 +119,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 02:  22%|███████████████▏                                                    | 13/58 [02:26<08:30, 11.34s/it, loss=3.3]"
+      "Epoch 02: 100%|███████████████████████████████████████████████████████████████████| 58/58 [11:02<00:00, 11.42s/it, loss=3.11]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "Target: tensor([ 0.1539, -1.7573,  0.0880,  0.1000])\n",
+      "Predicted: [0.1]\n",
+      "Predicted (tokens): ['[SOS]', '+', 'N1000', 'E-4', '[EOS]']\n",
+      "--------------------------------------------------------------------------------\n",
+      "Target: tensor([-0.1707,  1.4741,  0.2748,  0.1000])\n",
+      "Predicted: [0.1]\n",
+      "Predicted (tokens): ['[SOS]', '+', 'N1000', 'E-4', '[EOS]']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 03:  12%|████████▏                                                           | 7/58 [01:22<10:15, 12.07s/it, loss=3.22]"
      ]
     }
    ],
