--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "862cc811-ca31-4127-9369-eea8330b1541",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cbe0e586-27ff-4265-8074-edd5eadcecb4",
    "metadata": {},
    "outputs": [
@@ -27,8 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n",
-      "Loading weights from weights/tmodel-70.pt\n"
+      "Device: cpu\n"
      ]
     }
    ],
@@ -39,7 +38,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "6285c16b-91e8-43ea-af57-2c58a6df450c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10014 E1 exponent\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = trainer.tokenizer.tokenToIdx(\"E1\")\n",
+    "t = trainer.tokenizer.idxToToken(i)\n",
+    "c = trainer.tokenizer.idxToCategory(i)\n",
+    "print(i, t, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dc7d47a1-9418-46a5-9924-0d0b34dbdee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exponent\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ True, False,  True,  True, False, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = trainer.tokenizer.conditionalMask(i)\n",
+    "mask[1:10] == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5077a74a-7c97-4f66-bff1-33ba1fcf5bf3",
    "metadata": {},
    "outputs": [],
@@ -62,25 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2909fcc8-7bba-4969-9495-8a22c3875617",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train size: 900, Validation size: 100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 01:   0%|                                                               | 0/90 [00:04<?, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "self = trainer\n",
     "epoch = 1\n",
@@ -94,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "142f26b9-c549-4154-b9df-ee467dc316de",
    "metadata": {},
    "outputs": [],
@@ -104,28 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2b64062a-2eaf-4815-84aa-e5c85f950d14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error decoding ['+', '+', 'E-4']\n",
-      "tensor([[ 2.4520e+00],\n",
-      "        [        nan],\n",
-      "        [ 4.0000e-04],\n",
-      "        [ 1.6370e+00],\n",
-      "        [ 1.0710e+00],\n",
-      "        [ 3.0000e-03],\n",
-      "        [ 3.3070e-01],\n",
-      "        [-1.6370e+00],\n",
-      "        [ 1.6370e+00],\n",
-      "        [ 4.0000e-04]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred = torch.tensor(trainer.tokenizer.batchDecode(pred_idx))\n",
     "print(pred)"
@@ -133,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d998879d-e10f-4e42-a797-4e692587b6ff",
    "metadata": {},
    "outputs": [],
@@ -144,18 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "01a449c1-0be2-4334-9176-a6e5ef09cd15",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(1.5480)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loss = mse_loss(pred, tgt)\n",
     "mask = ~torch.isnan(pred) & ~torch.isnan(tgt)\n",
